soemi-woeb/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: soemi-woeb
spec:
  replicas: 1
  selector:
    matchLabels:
      app: soemi-woeb
  template:
    metadata:
      labels:
        app: soemi-woeb
    spec:
      containers:
        - name: soemi-woeb
          image: z100/soemi-woeb:${COMMIT_SHA_SHORT}
          ports:
            - containerPort: 3000
