soemi-woeb/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: soemi-woeb
  labels:
    app: soemi-woeb
spec:
  type: LoadBalancer
  selector:
    app: soemi-woeb
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      nodePort: 31000
