soemi-woeb/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: soemi-woeb-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
#    - host: sömi-weather.ch
     - http:
        paths:
          - path: /*
            pathType: Exact
            backend:
              service:
                name: soemi-woeb
                port:
                  number: 3000
